# smart-home

./: CLAUDE.md  README.md  govee-monitor-api.service  govee-monitor.service  pyproject.toml  smart-home.service
docs/: adding-new-devices.md  waydroid-amcrest.md
firmware/CameraWebServer/: app_httpd.cpp
govee_monitor/: __main__.py  db.py  decoder.py  labels.py  web.py
hooks/: pre-commit
ios/SmartHomeNotify/: AppDelegate.swift  ContentView.swift  SmartHomeNotifyApp.swift
ios/SmartHomeNotify/SmartHomeNotify/: AppDelegate.swift  ContentView.swift  Info.plist
ios/SmartHomeNotify/SmartHomeNotify.xcodeproj/project.xcworkspace/xcuserdata/chrispriest.xcuserdatad/: UserInterfaceState.xcuserstate
migrations/: null_stale_offline_readings.py
smart_home/: __main__.py  alert_config.py  bandwidth.py  battery.py  ble_types.py  camera.py  db.py  decoder.py  events.py  flasher.py  garage.py  labels.py  plug.py  pool.py  presence.py  push.py  pvvx.py  relay.py  scanner.py  smart-home-api.service  smart_plug.py  web.py
smart_home/relay_firmware/: README.md  animate_buffer.py  build.sh  demo_buffer.py  outside_shade_2026_05_16.csv  setup.sh  temperature_dataset.csv  test_buffer.py
smart_home/relay_firmware/esp32_relay/: esp32_relay.ino
