[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "govee-monitor"
version = "0.1.0"
description = "Monitor Govee H5074 temperature/humidity sensors via BLE"
requires-python = ">=3.9"
dependencies = [
    "bleak>=0.21.0",
    "click>=8.0",
    "flask>=3.0",
]

[project.scripts]
govee-monitor = "govee_monitor.__main__:main"
