[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-home"
version = "0.1.0"
description = "Smart home monitoring: BLE temperature/humidity sensors and more"
requires-python = ">=3.9"
dependencies = [
    "bleak>=0.21.0",
    "click>=8.0",
    "flask>=3.0",
]

[project.scripts]
smart-home = "smart_home.__main__:main"
