[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-home"
version = "0.1.0"
description = "Smart home monitoring: BLE temperature/humidity sensors and more"
requires-python = ">=3.9"
dependencies = [
    "bleak>=0.21.0",
    "click>=8.0",
    "flask>=3.0",
    "flask-compress>=1.14",
    "httpx[http2]>=0.27",
    "PyJWT[crypto]>=2.0",
    "psutil>=5.9",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "esptool>=4.0",
    "pyserial>=3.5",
    "astral>=3.0",
]

[project.scripts]
smart-home = "smart_home.__main__:main"
